Fixing Body Links & Contrast

--- a/style.scss
+++ b/style.scss
@@ -177,8 +177,8 @@ textarea:focus,
 }
 
 a {
-	color: $shadow;
-	text-decoration: none;
+	color: $fern-frond;
+	text-decoration: underline;
 }
 
 a:hover,
